[package]
name = "learnrust"
version = "0.1.0"
authors = ["Phillip Cloud <cpcloud@gmail.com>"]

[dependencies]
clap = '*'
regex = '*'
libc = { version = '*', default-features = false }
num = '*'
image = '*'
crossbeam = '*'
num_cpus = '*'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = false

